# Kestrel

./: docker-compose.prod.yml  docker-compose.yml  package.json
kestrel-backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
kestrel-backend/alembic/: README.md  env.py
kestrel-backend/alembic/versions/: 47f211f7faa8_baseline_schema.py
kestrel-backend/app/: dependencies.py  main.py
kestrel-backend/app/agent/: __init__.py  attachments.py  core.py  events.py  loop.py  observe.py  router.py
kestrel-backend/app/agent/alerts/: conditions.py  models.py  scheduler.py
kestrel-backend/app/agent/hooks/: cost_tracker.py  feedback_loop.py  tier_gate.py
kestrel-backend/app/agent/memory/: compression.py  episodic.py  extraction.py  manager.py  semantic.py  working.py
kestrel-backend/app/agent/multi/: __init__.py  strategies.py  subagent.py  team.py
kestrel-backend/app/agent/prompts/: ask_user.md  context_summary.md  fact_extraction.md  figure_extraction.md  followup.md  planner.md  skill_matcher.md  strategy_router.md  styles.md  synthesis_subagent.md  synthesis_team.md  system.md  tool_error_recovery.md
kestrel-backend/app/agent/sessions/: models.py  repository.py
kestrel-backend/app/agent/skills/: loader.py  matcher.py  registry.py
kestrel-backend/app/agent/tools/: analysis.py  ask_user.py  base.py  fundamental.py  institutional.py  market.py  memory_tools.py  mops_tools.py  rankings_tools.py  registry.py  (+7 more)
kestrel-backend/app/channels/: __init__.py  base.py  formatter.py  gateway.py  models.py
kestrel-backend/app/core/: config.py  constants.py  entitlements.py  exceptions.py  industry_tiers.py  logging.py  observability.py  paths.py  sector_names.py  security.py
kestrel-backend/app/db/: __init__.py  session.py
kestrel-backend/app/formulas/: __init__.py  base.py  moving_average.py  oscillators.py  patterns.py  trend.py  volatility.py  volume.py
kestrel-backend/app/middleware/: cache_headers.py  cors.py  exception_handlers.py  hardening.py  rate_limiter.py  request_id.py
kestrel-backend/app/models/: __init__.py  alert.py  base.py  pet.py  portfolio.py  registry.py  user.py  watchlist.py
kestrel-backend/app/providers/: __init__.py  base.py  cache.py  chatanywhere_usage.py  http.py  rate_limiter.py  registry.py
kestrel-backend/app/push/: __init__.py  broker.py  events.py  sse.py
kestrel-backend/app/schemas/: admin.py  agent.py  ai_analysis.py  alerts.py  auth.py  channels.py  common.py  derivative.py  figures.py  fundamental.py  health.py  indicator.py  institutional.py  international.py  macro.py  market.py  observe.py  pets.py  stock.py  themes.py  user.py  voice.py
kestrel-backend/app/scrapers/: __init__.py  cmoney_etf.py  moneydj_etf.py  mops_profile.py  ptt.py  rss.py  shareholder_gifts.py  tdcc_holders.py  twse_etf.py
kestrel-backend/data/: concept_themes.json  tier_classification.json
kestrel-backend/data/supply_chain/: relationships.json
kestrel-backend/scripts/: agent_report_test.py  agent_thinking_test.py  backfill_prices.py  classify_themes.py  daily_ingest.py  daily_scoring.py  discover_themes.py  entrypoint.sh  extract_supply_chain.py  populate_duckdb.py  scrape_profiles.py  seed_figures.py  seed_themes.py  weekly_ai_summaries.py
kestrel-backend/tests/: conftest.py
kestrel-backend/tests/agent/: conftest.py  test_agent_e2e_live.py  test_rich_cards.py  test_tool_coverage.py
kestrel-backend/tests/cron/: conftest.py  test_daily_ingest.py  test_daily_scoring.py  test_data_files.py  test_scrape_profiles.py  test_seed_themes.py  test_theme_discovery.py  test_weekly_ai_summaries.py
kestrel-backend/tests/database/: conftest.py  test_portfolio_watchlist.py  test_schema.py  test_semantic_memory.py  test_theme_repository.py  test_user_repo.py
kestrel-backend/tests/endpoint/: conftest.py  test_health_and_errors.py
kestrel-backend/tests/load/: README.md  locustfile.py
kestrel-backend/tests/perf/: conftest.py  test_query_latency.py  test_read_concurrency.py
kestrel-backend/tests/scraper/: conftest.py  test_ptt.py  test_rss.py  test_twse_etf.py
kestrel-backend/typings/yfinance/: __init__.pyi
(+441 files in other folders)
