[project]
name = "kestrel-backend"
version = "0.1.0"
description = "Kestrel - Taiwan stock analysis platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "numpy>=2.0",
    "pandas>=2.0",
    "structlog>=24.0",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "email-validator>=2.3.0",
    "duckdb>=1.5.3",
    "anthropic>=0.105.2",
    "openai>=2.38.0",
    "pyyaml>=6.0.3",
    "beautifulsoup4>=4.14.3",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "yfinance>=0.2.40",
    "lxml>=5.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0"]
postgres = ["asyncpg>=0.29"]
# Production observability (optional — the app degrades gracefully if absent).
observability = [
    "prometheus-fastapi-instrumentator>=7.0",
    "sentry-sdk[fastapi]>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx",
    "ruff>=0.7",
    "mypy>=1.11",
    "locust>=2.30",  # API load testing - see tests/load/locustfile.py
    "asgi-lifespan>=2.1",  # run app lifespan in HTTP-route tests (app.state wiring)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Task runner scripts (run with: uv run <name>)
# Note: [tool.uv.scripts] removed - use shell aliases or justfile instead
# lint: ruff check app/ tests/
# format: ruff format app/ tests/
# typecheck: mypy app/
# test: pytest

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    # FastAPI idiom: Depends()/Query()/Path() in argument defaults is intentional.
    "B008",
    # Long lines are tolerated (many are data tables / SQL / prompts).
    "E501",
    # Opinionated simplification suggestions - left to author discretion, not bugs:
    "SIM102",  # collapsible nested if
    "SIM105",  # contextlib.suppress vs try/except/pass
    "SIM108",  # ternary vs if/else block
    # PEP 695 generics (`class C[T]`) - not adopting new syntax repo-wide yet.
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
# Tests: F841/B017 from fixtures/asserts; E402 because load_dotenv() must run
# before importing app modules that read env at import time.
"tests/*" = ["F841", "B017", "E402"]
# main.py imports formula modules after logger setup purely for side-effect
# registration - order is intentional, so E402 does not apply.
"app/main.py" = ["E402"]
# Scripts run `sys.path.insert(...)` before importing app.* so they work as
# `python -m scripts.X` - E402 is expected and correct here.
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# tests/load holds the Locust load test, which is driven by `locust`, not pytest.
norecursedirs = ["tests/load"]
# Opt-in markers. Perf tests are excluded from the default run (they seed large
# synthetic datasets and take time); run them with `pytest -m perf`.
addopts = "-m 'not perf'"
markers = [
    "perf: performance/load benchmarks with latency budgets (opt-in; run with -m perf)",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# Optional extras (the `observability` + `redis` groups). The app guards these
# imports with try/except ImportError and degrades gracefully when absent, so a
# dev/CI env without the extras installed must not fail strict type-checking on
# the missing stubs. Production installs the extras and gets real checking.
[[tool.mypy.overrides]]
module = [
    "redis.*",
    "sentry_sdk.*",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
